--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Capsid.js • TodoMVC</title>
-		<style>.hidden { display: none; }</style>
+		<style>
+			.hidden {
+				display: none;
+			}
+		</style>
 	</head>
 	<body>
 		<section class="todoapp">
