--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<ul class="todo-list"></ul>
 			</section>
 			<footer class="footer hidden">
-				<span class="todo-count"> <strong>1</strong> item left </span>
+				<span class="todo-count"><strong></strong> item<span class="plural">s</span> left</span>
 				<ul class="filters">
 					<li><a href="#/all" class="selected">All</a></li>
 					<li><a href="#/active">Active</a></li>
@@ -40,6 +40,6 @@
 			<p>Written by <a href="https://github.com/kt3k">Yoshiya Hinosawa</a></p>
 			<p>Part of <a href="https://todomvc.com">TodoMVC</a></p>
 		</footer>
-		<script src="src/app.ts"></script>
+		<script src="src/index.ts"></script>
 	</body>
 </html>
