--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 				<ul class="todo-list"></ul>
 			</section>
 			<footer class="footer hidden">
-				<span class="todo-count"><strong></strong> item<span class="plural">s</span> left</span>
+				<span class="todo-count">
+					<strong></strong>
+					item<span class="plural">s</span>
+					left
+				</span>
 				<ul class="filters">
 					<li><a href="#/all" class="selected">All</a></li>
 					<li><a href="#/active">Active</a></li>
