--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					left
 				</span>
 				<ul class="filters">
-					<li><a href="#/all" class="selected">All</a></li>
+					<li><a href="#/all">All</a></li>
 					<li><a href="#/active">Active</a></li>
 					<li><a href="#/completed">Completed</a></li>
 				</ul>
