--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					placeholder="What needs to be done?"
 				/>
 			</header>
-			<section class="main">
+			<section class="main hidden">
 				<input id="toggle-all" class="toggle-all hidden" type="checkbox" />
 				<label for="toggle-all">Mark all as complete</label>
 				<ul class="todo-list"></ul>
